fix: horizontal scroll on mobile

--- a/src/styles/blocks/your-pick.scss
+++ b/src/styles/blocks/your-pick.scss
@@ -15,8 +15,8 @@
     &-image {
       @include page-grid;
 
-      a{
-        grid-column: span 6;
+      a {
+        grid-column: span 1;
 
         @include on-tablet {
           max-width: 288px;
@@ -32,15 +32,12 @@
       }
 
       img {
+        width: 100%;
         transition: transform $effectDuration ease-in-out;
 
-        &:hover{
-        transform: scale(110%);
+        &:hover {
+          transform: scale(110%);
         }
-
-
-
-
       }
     }
 
